使用Java安全管理器控制程序权限